feat(sepolia): add gen-validation for Jovian parameters task
Adds gen-validation target to Makefile for generating VALIDATION.md
automatically once the Jovian upgrade is deployed to Base Sepolia.

VALIDATION.md currently contains only a comment explaining it cannot
be generated yet because the setDAFootprintGasScalar and setMinBaseFee
functions don't exist on the current SystemConfig deployment.

Once the Jovian upgrade is deployed, run `make gen-validation` to
generate the full validation file with state-diff.

--- a/sepolia/2025-11-03-set-jovian-parameters/Makefile
+++ b/sepolia/2025-11-03-set-jovian-parameters/Makefile
@@ -22,3 +22,13 @@ approve:
 execute:
 	forge script --rpc-url $(L1_RPC_URL) SetJovianParametersScript \
 	--sig "run(bytes)" 0x --ledger --hd-paths "m/44'/60'/$(LEDGER_ACCOUNT)'/0/0" --broadcast -vvvv
+
+.PHONY: deps
+deps:
+	go install github.com/jackchuma/state-diff@v0.0.1-rc.5
+
+.PHONY: gen-validation
+gen-validation:
+	$(GOPATH)/bin/state-diff --rpc $(L1_RPC_URL) -o VALIDATION.md \
+	-- forge script --rpc-url $(L1_RPC_URL) SetJovianParametersScript \
+	--sig "sign(address[])" "[$(OWNER_SAFE)]"
