feat(sepolia): set placeholder min base fee to 10,000 wei
Updates the minimum base fee from 5,000,000 wei to 10,000 wei (1e-5 gwei).
This is a placeholder value that will be updated on November 14 to reflect
the previous week's p10-p20 base fee.

--- a/sepolia/2025-11-03-set-jovian-parameters/.env
+++ b/sepolia/2025-11-03-set-jovian-parameters/.env
@@ -10,4 +10,5 @@ OWNER_SAFE=0x0fe884546476dDd290eC46318785046ef68a0BA9
 
 # Jovian parameters
 DA_FOOTPRINT_GAS_SCALAR=325
-MIN_BASE_FEE=5000000
+# Placeholder value - will be updated on November 14 to the previous week's p10-p20 base fee
+MIN_BASE_FEE=10000
