feat(sepolia): update DA footprint scalar to 312 for 30 Mgas/sec target

--- a/sepolia/2025-11-03-set-jovian-parameters/.env
+++ b/sepolia/2025-11-03-set-jovian-parameters/.env
@@ -9,6 +9,9 @@ SYSTEM_CONFIG=0xf272670eb55e895584501d564AfEB048bEd26194
 OWNER_SAFE=0x0fe884546476dDd290eC46318785046ef68a0BA9
 
 # Jovian parameters
-DA_FOOTPRINT_GAS_SCALAR=325
+# =================
+
+# Accounts for gas target of 30 Mgas/sec when Jovian activates on mainnet
+DA_FOOTPRINT_GAS_SCALAR=312
 # Placeholder value - will be updated on November 14 to the previous week's p10-p20 base fee
 MIN_BASE_FEE=10000
